# gcc-creative-studio

./: .pre-commit-config.yaml  CUSTOM_DOMAIN.md  DEVELOPMENT.md  README.md  docker-compose.yml
backend/: README.md  main.py  pyproject.toml
backend/alembic/versions/: 0bd50a4bf20c_add_original_gcs_uris.py  3e710b64d021_consolidate_soft_delete_and_unified_.py  488846b86e90_remove_workspace_id_from_workflows.py  6591e10bbab7_initial_schema.py  73b7bec44615_create_workflows_table.py  9393a3d298c6_add_workflow_runs_table.py  e4b12d7ae0d3_add_soft_delete.py
backend/bootstrap/: __init__.py  bootstrap.py  seed_data.py
backend/src/: database.py  database_migrations.py
backend/src/admin/: admin_controller.py  admin_service.py
backend/src/audios/: audio_service.py
backend/src/auth/: auth_guard.py  firebase_client_service.py  iam_signer_credentials_service.py
backend/src/brand_guidelines/: brand_guideline_controller.py  brand_guideline_service.py
backend/src/common/: base_repository.py  email_service.py  events.py  media_utils.py  storage_service.py
backend/src/config/: config_service.py
backend/src/galleries/: gallery_controller.py  gallery_service.py
backend/src/images/: imagen_controller.py  imagen_service.py
backend/src/media_templates/: media_templates_controller.py  media_templates_service.py
backend/src/multimodal/: gemini_service.py
backend/src/source_assets/: source_asset_controller.py  source_asset_service.py
backend/src/users/: user_controller.py  user_model.py  user_service.py
backend/src/videos/: veo_controller.py  veo_service.py
backend/src/workbench/: service.py
backend/src/workflows/: workflow_controller.py  workflow_service.py
backend/src/workflows_executor/: workflows_executor_controller.py  workflows_executor_service.py
backend/src/workspaces/: workspace_auth_guard.py  workspace_controller.py  workspace_service.py
backend/tests/: conftest.py
backend/tests/admin/: test_admin_service.py
backend/tests/auth/: test_auth_guard.py
backend/tests/common/: test_media_utils.py  test_storage_service.py
backend/tests/galleries/: test_gallery_service.py
backend/tests/images/: test_imagen_controller.py  test_imagen_service.py
backend/tests/media_templates/: test_media_templates_service.py
frontend/: README.md
(+90 files in other folders)
