# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "creative-studio"
version = "0.1.0"
description = "GenMedia Creative Studio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gunicorn>=23.0.0",
    "uvicorn>=0.37.0",
    "fastapi>=0.118.0",
    "fastapi-utilities==0.3.0",
    "firebase-admin>=6.9.0",
    "google-cloud-aiplatform>=1.119.0",
    "google-genai>=1.52.0",
    "mediapy>=1.2.4",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "shortuuid>=1.0.13",
    "tenacity>=9.1.2",
    "google-cloud-tasks>=2.0.0",
    "google-cloud-logging>=3.0.0",
    "google-cloud-speech>=2.0.0",
    "google-cloud-discoveryengine>=0.13.12",
    "google-cloud-iam>=2.0.0",
    "python-multipart>=0.0.20",
    "pydantic[email]>=2.11.10",
    "pydantic-settings>=2.11.0",
    "pypdf>=6.1.1",
    "google-cloud-texttospeech>=2.33.0",
    "google-cloud-storage>=3.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "cloud-sql-python-connector[asyncpg]>=1.0.0",
    "alembic>=1.13.0",
    "pyyaml>=6.0.3",
    "google-cloud-workflows>=1.19.0",
    "google-api-python-client>=2.187.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.4",
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-cov",
    "pytest-watch",
    "pytest-asyncio>=0.23.5",
]

[tool.coverage.run]
source = ["livecov"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=lcov:lcov.info --cov-report=term"

[tool.isort]
profile = "black"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pre-commit>=4.5.1",
]

[tool.black]
line-length = 80
